<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_usuario"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_usuario"/>
        <item
            android:id="@+id/nav_documento"
            android:icon="@drawable/ic_document_black_24dp"
            android:title="@string/menu_documento"
            />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_ajustes"/>
        <item
            android:id="@+id/nav_termino_politica"
            android:icon="@drawable/baseline_policy_24"
            android:title="@string/menu_terminos_politicos"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menu_cerrar_sesion">

        </item>
    </group>
</menu>