<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:background="@color/red_black">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icono_flecha_izquierda" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Iniciar Sesión"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gabarito"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/txtIniciarSesion"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="login.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/txtCorreoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtCorreoLogin"
                android:drawableEnd="@drawable/icono_correo"
                android:drawablePadding="10dp"
                android:padding="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtPasswordLogin"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:fontFamily="@font/gabarito"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/txtNuevoUsuarioLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNuevoUsuario"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/gabarito"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>