<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_empty"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_empty_1"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_empty_2"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_empty_3"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_empty_4"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_empty_5"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_empty_6"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_empty_7"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_empty_8"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_empty_9"
            app:showAsAction="never"
            android:title="" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/CerrarSesion"
            />
    </group>
</menu>